Reimplement Java annotation processor support (#572)
* Reimplement Java annotation processor support

Replaces the previous `model.AnnotationProcessing(enabled: Boolean)` model
which predates the Bloop removal. The old code only added `-s` or `-proc:none`
to javac options; it never arranged processor JARs onto `-processorpath`,
which meant any actual processing was accidental (Lombok happened to mostly
work via runtime-classpath ServiceLoader; AutoValue-style splits were broken).

New `java:` shape, three composable fields, all default empty/false:

  - `scanForAnnotationProcessors: Boolean` — opt-in to scan resolved-`dependencies`
    jars for `META-INF/services/javax.annotation.processing.Processor` and
    add matching jars to `-processorpath`. Discovery emits an info-level
    log line per match, including the processor class names parsed from
    the service file.
  - `annotationProcessors: JsonSet[Dep]` — explicit processor-only deps,
    resolved separately and added to `-processorpath` only (never on the
    runtime classpath).
  - `annotationProcessorOptions: AnnotationProcessorOptions` — `-A<k>=<v>`
    flags passed globally to javac.

Validation: rejects manual `-proc:`, `-s`, `-processorpath`, or `-A` in
`java.options` when bleep is auto-wiring annotation processing. Honors
`-proc:none` in `java.options` as an escape hatch (skips all auto-wiring).
Loud-fails when `scanForAnnotationProcessors: true` is set but no processor
JARs exist anywhere — the user typed `true` for a reason; silently doing
`-proc:none` would be confusing.

Bug fix: `BleepBuildConverter` was dropping `javaOptions` when constructing
`ProjectLanguage.ScalaJava` for mixed Scala+Java projects, which is why
javac never saw any of these flags for projects with a `scala.version`.
Now passed through.

Tests:
  - JavaTest: round-trip + setlike unit tests for the three new fields.
  - IntegrationTests: five new tests covering all four configuration
    tiers plus the no-op-opt-in loud failure. 